Infra/k8s/dev/service.yml
apiVersion: v1
kind: Service
metadata:
    name: flask-app
    namespace: dev
spec:
    selector:
        app: flask-app
    type: ClusterIP
    ports:
        - name: http
          protocol: TCP
          port: 5000
          targetPort: 5000
