Infra/k8s/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "flask-app-ip"
    networking.gke.io/managed-certificates: flask-app-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: flask-app
      port:
        number: 5000
